Fix text-align CSS on 404 pages (#188)
footerPanel and footerWrapper were inheriting center text-align prop from notFoundMessage. Reset footer CSS to initial text-align value so they don't inherit on 404 pages.

--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -6,6 +6,7 @@ footer {
     padding: $side-padding;
     position: relative;
     width: 100%;
+    text-align: initial;
 
     .mainWrapper {
       display: flex;
